--- a/frontend/public/50x.html
+++ b/frontend/public/50x.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="theme-color" content="#3b82f6">
-    <title>Offline - Guest Manager</title>
+    <meta name="theme-color" content="#4f46e5">
+    <title>Server Error - Guest Manager</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -33,7 +33,7 @@
         }
         h1 {
             margin-top: 0;
-            color: #4f46e5;
+            color: #dc2626;
         }
         p {
             margin: 0 0 1.5rem;
@@ -50,6 +50,8 @@
             cursor: pointer;
             font-size: 16px;
             margin-top: 20px;
+            text-decoration: none;
+            display: inline-block;
         }
         .btn:hover {
             background: #4338ca;
@@ -64,30 +66,32 @@
                 color: #f9f9f9;
             }
             h1 {
-                color: #818cf8;
+                color: #f87171;
+            }
+            p {
+                color: #d1d5db;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="icon">📡</div>
-        <h1>You're Offline</h1>
-        <p>Unable to connect to Guest Manager. Please check your internet connection and try again.</p>
-        <p>If you've previously logged in, some features may still be available in offline mode.</p>
-        <button class="btn" onclick="attemptReconnect()">Try Again</button>
+        <div class="icon">⚠️</div>
+        <h1>Server Error</h1>
+        <p>We're sorry, but something went wrong on our end.</p>
+        <p>Our team has been notified of this issue and we're working to fix it.</p>
+        <p>Please try again in a few moments.</p>
+        <a href="/" class="btn">Retry</a>
+        <div style="margin-top: 30px; border-top: 1px solid #e5e7eb; padding-top: 20px;">
+            <h2 style="font-size: 18px; margin-top: 0; color: #4b5563;">Need help?</h2>
+            <p>Contact our support team at <a href="mailto:support@bhaujanvypar.com" style="color: #4f46e5;">support@bhaujanvypar.com</a></p>
+        </div>
     </div>
     <script>
-        function attemptReconnect() {
-            // Try to reload the page
+        // Auto-retry after a delay
+        setTimeout(function() {
             window.location.reload();
-        }
-        // Check periodically if connection is restored
-        setInterval(() => {
-            if (navigator.onLine) {
-                document.querySelector('.btn').textContent = "Connection Restored! Click to Reload";
-            }
-        }, 5000);
+        }, 30000);
     </script>
 </body>
 </html>
