--- a/frontend/public/offline.html
+++ b/frontend/public/offline.html
@@ -4,59 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="theme-color" content="#3b82f6">
-    <title>Offline - Guest Manager</title>
+    <title>You're Offline - Guest Manager</title>
+    <link rel="icon" href="/favicon.ico" />
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: #f9fafb;
+            color: #111827;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             min-height: 100vh;
-            background-color: #f9f9f9;
-            color: #333;
+            text-align: center;
             padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
         }
         .container {
             max-width: 500px;
-            background: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            text-align: center;
+            padding: 2rem;
+            background-color: white;
+            border-radius: 1rem;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            margin: 1rem;
         }
         .icon {
-            font-size: 60px;
-            margin-bottom: 20px;
+            font-size: 3rem;
+            margin-bottom: 1rem;
         }
         h1 {
-            margin-top: 0;
             color: #4f46e5;
+            margin-bottom: 1rem;
         }
         p {
-            margin: 0 0 1.5rem;
-            font-size: 1rem;
-            color: #6b7280;
+            margin-bottom: 1.5rem;
+            color: #4b5563;
             line-height: 1.5;
         }
         .btn {
-            background: #4f46e5;
+            background-color: #4f46e5;
             color: white;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.5rem;
             border: none;
-            padding: 12px 24px;
-            border-radius: 4px;
+            font-size: 1rem;
             cursor: pointer;
-            font-size: 16px;
-            margin-top: 20px;
+            transition: background-color 0.2s;
         }
         .btn:hover {
-            background: #4338ca;
+            background-color: #4338ca;
         }
         @media (prefers-color-scheme: dark) {
             body {
-                background-color: #333;
+                background-color: #1f1f1f;
                 color: #f9f9f9;
             }
             .container {
@@ -88,6 +88,14 @@
                 document.querySelector('.btn').textContent = "Connection Restored! Click to Reload";
             }
         }, 5000);
+        
+        // Register with the service worker if we're loaded from cache
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+            .catch(error => {
+                console.error('Service worker registration failed:', error);
+            });
+        }
     </script>
 </body>
 </html>
