--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <!-- Dynamic icon generation if icons are missing -->
-    <script src="%PUBLIC_URL%/generateIcons.js"></script>
+    <!-- Removing reference to generateIcons.js -->
     
     <!-- Web App Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -48,7 +48,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- Error recovery script -->
-    <script src="%PUBLIC_URL%/errorRecovery.js"></script>
   </body>
 </html>
